--- a/source/java/jdbc.properties
+++ b/source/java/jdbc.properties
@@ -2,4 +2,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/noteoverflow
 jdbc.username=noteoverflow
-jdbc.password=Aminatiamo
+jdbc.password=*******
